update paper files

--- a/BibTexDatabase.bib
+++ b/BibTexDatabase.bib
@@ -15220,3 +15220,17 @@ PMID: 32554604},
 	note = {Publisher: Elsevier},
 	langid = {English}
 }
+
+@article{stoto2022,
+	title = {COVID-19 data are messy: analytic methods for rigorous impact analyses with imperfect data},
+	author = {Stoto, Michael A. and Woolverton, Abbey and Kraemer, John and Barlow, Pepita and Clarke, Michael},
+	year = {2022},
+	month = {01},
+	date = {2022-01-06},
+	journal = {Globalization and Health},
+	pages = {2},
+	volume = {18},
+	number = {1},
+	doi = {10.1186/s12992-021-00795-0},
+	url = {https://doi.org/10.1186/s12992-021-00795-0}
+}
