--- a/BibTexDatabase.bib
+++ b/BibTexDatabase.bib
@@ -15234,3 +15234,232 @@ PMID: 32554604},
 	doi = {10.1186/s12992-021-00795-0},
 	url = {https://doi.org/10.1186/s12992-021-00795-0}
 }
+
+@article{abouk2021a,
+	title = {The Immediate Effect of COVID-19 Policies on Social-Distancing Behavior in the United States},
+	author = {Abouk, Rahi and Heydari, Babak},
+	year = {2021},
+	month = {01},
+	date = {2021-01-05},
+	journal = {Public Health Reports},
+	pages = {0033354920976575},
+	doi = {10.1177/0033354920976575},
+	url = {https://doi.org/10.1177/0033354920976575},
+	langid = {en}
+}
+
+@article{adolph2021,
+	title = {Pandemic Politics: Timing State-Level Social Distancing Responses to COVID-19},
+	author = {Adolph, Christopher and Amano, Kenya and Bang-Jensen, Bree and Fullman, Nancy and Wilkerson, John},
+	year = {2021},
+	month = {04},
+	date = {2021-04-01},
+	journal = {Journal of Health Politics, Policy and Law},
+	pages = {211--233},
+	volume = {46},
+	number = {2},
+	doi = {10.1215/03616878-8802162},
+	url = {https://doi.org/10.1215/03616878-8802162}
+}
+
+@techreport{allcott2020a,
+	title = {What Explains Temporal and Geographic Variation in the Early US Coronavirus Pandemic?},
+	author = {Allcott, Hunt and Boxell, Levi and Conway, Jacob C. and Ferguson, Billy A. and Gentzkow, Matthew and Goldman, Benny},
+	year = {2020},
+	month = {10},
+	date = {2020-10-19},
+	doi = {10.3386/w27965},
+	url = {https://www.nber.org/papers/w27965},
+	note = {DOI: 10.3386/w27965},
+	langid = {en}
+}
+
+@article{ashraf2020,
+	title = {Economic impact of government interventions during the COVID-19 pandemic: International evidence from financial markets},
+	author = {Ashraf, Badar Nadeem},
+	year = {2020},
+	month = {09},
+	date = {2020-09-01},
+	journal = {Journal of Behavioral and Experimental Finance},
+	pages = {100371},
+	volume = {27},
+	doi = {10.1016/j.jbef.2020.100371},
+	url = {https://www.sciencedirect.com/science/article/pii/S2214635020302422},
+	langid = {en}
+}
+
+@article{barceló2022,
+	title = {Windows of Repression: Using COVID-19 Policies against Political Dissidents?},
+	author = {{Barceló}, Joan and Kubinec, Robert and Cheng, Cindy and Rahn, {Tiril Høye} and Messerschmidt, Luca},
+	year = {2022},
+	date = {2022},
+	journal = {Journal of Peace Research},
+	volume = {Forthcoming},
+	url = {https://osf.io/preprints/socarxiv/yuqw2/}
+}
+
+@article{bo2021,
+	title = {Effectiveness of non-pharmaceutical interventions on COVID-19 transmission in 190 countries from 23 January to 13 April 2020},
+	author = {Bo, Yacong and Guo, Cui and Lin, Changqing and Zeng, Yiqian and Li, Hao Bi and Zhang, Yumiao and Hossain, Md Shakhaoat and Chan, Jimmy W. M. and Yeung, David W. and Kwok, Kin On and Wong, Samuel Y. S. and Lau, Alexis K. H. and Lao, Xiang Qian},
+	year = {2021},
+	month = {01},
+	date = {2021-01-01},
+	journal = {International Journal of Infectious Diseases},
+	pages = {247--253},
+	volume = {102},
+	doi = {10.1016/j.ijid.2020.10.066},
+	url = {https://www.sciencedirect.com/science/article/pii/S1201971220322700},
+	langid = {en}
+}
+
+@article{brauner2020a,
+	title = {Inferring the effectiveness of government interventions against COVID-19},
+	author = {Brauner, Jan M. and Mindermann, {Sören} and Sharma, Mrinank and Johnston, David and Salvatier, John and {Gaven{\v{c}}iak}, {Tomá{\v{s}}} and Stephenson, Anna B. and Leech, Gavin and Altman, George and Mikulik, Vladimir and Norman, Alexander John and Monrad, Joshua Teperowski and Besiroglu, Tamay and Ge, Hong and Hartwick, Meghan A. and Teh, Yee Whye and Chindelevitch, Leonid and Gal, Yarin and Kulveit, Jan},
+	year = {2020},
+	month = {12},
+	date = {2020-12-15},
+	journal = {Science},
+	doi = {10.1126/science.abd9338},
+	url = {https://science.sciencemag.org/content/early/2020/12/15/science.abd9338},
+	langid = {en}
+}
+
+@article{courtemanche2020a,
+	title = {Strong Social Distancing Measures In The United States Reduced The COVID-19 Growth Rate},
+	author = {Courtemanche, Charles and Garuccio, Joseph and Le, Anh and Pinkston, Joshua and Yelowitz, Aaron},
+	year = {2020},
+	month = {05},
+	date = {2020-05-14},
+	journal = {Health Affairs},
+	pages = {1237--1246},
+	volume = {39},
+	number = {7},
+	doi = {10.1377/hlthaff.2020.00608},
+	url = {https://www.healthaffairs.org/doi/full/10.1377/hlthaff.2020.00608}
+}
+
+@techreport{dave2020b,
+	title = {When Do Shelter-in-Place Orders Fight COVID-19 Best? Policy Heterogeneity Across States and Adoption Time},
+	author = {Dave, Dhaval M. and Friedson, Andrew I. and Matsuzawa, Kyutaro and Sabia, Joseph J.},
+	year = {2020},
+	month = {05},
+	date = {2020-05-04},
+	doi = {10.3386/w27091},
+	url = {https://www.nber.org/papers/w27091},
+	note = {DOI: 10.3386/w27091},
+	langid = {en}
+}
+
+@article{fellows2020,
+	title = {The COVID-19 Pandemic, Community Mobility and the Effectiveness of Non-pharmaceutical Interventions: The United States of America, February to May 2020},
+	author = {Fellows, Ian E. and Slayton, Rachel B. and Hakim, Avi J.},
+	year = {2020},
+	month = {07},
+	date = {2020-07-09},
+	journal = {arXiv:2007.12644 [q-bio, stat]},
+	url = {http://arxiv.org/abs/2007.12644}
+}
+
+@article{flaxman2020b,
+	title = {Estimating the effects of non-pharmaceutical interventions on COVID-19 in Europe},
+	author = {Flaxman, Seth and Mishra, Swapnil and Gandy, Axel and Unwin, H. Juliette T. and Mellan, Thomas A. and Coupland, Helen and Whittaker, Charles and Zhu, Harrison and Berah, Tresnia and Eaton, Jeffrey W. and Monod, {Mélodie} and Perez-Guzman, Pablo N. and Schmit, Nora and Cilloni, Lucia and Ainslie, Kylie E. C. and Baguelin, Marc and Boonyasiri, Adhiratha and Boyd, Olivia and Cattarino, Lorenzo and Cooper, Laura V. and {Cucunubá}, Zulma and Cuomo-Dannenburg, Gina and Dighe, Amy and Djaafara, Bimandra and Dorigatti, Ilaria and van Elsland, Sabine L. and FitzJohn, Richard G. and Gaythorpe, Katy A. M. and Geidelberg, Lily and Grassly, Nicholas C. and Green, William D. and Hallett, Timothy and Hamlet, Arran and Hinsley, Wes and Jeffrey, Ben and Knock, Edward and Laydon, Daniel J. and Nedjati-Gilani, Gemma and Nouvellet, Pierre and Parag, Kris V. and Siveroni, Igor and Thompson, Hayley A. and Verity, Robert and Volz, Erik and Walters, Caroline E. and Wang, Haowei and Wang, Yuanrong and Watson, Oliver J. and Winskill, Peter and Xi, Xiaoyue and Walker, Patrick G. T. and Ghani, Azra C. and Donnelly, Christl A. and Riley, Steven and Vollmer, Michaela A. C. and Ferguson, Neil M. and Okell, Lucy C. and Bhatt, Samir and Imperial College COVID-19 Response Team, },
+	year = {2020},
+	month = {08},
+	date = {2020-08-01},
+	journal = {Nature},
+	pages = {257--261},
+	volume = {584},
+	number = {7820},
+	doi = {10.1038/s41586-020-2405-7}
+}
+
+@article{haug2020a,
+	title = {Ranking the effectiveness of worldwide COVID-19 government interventions},
+	author = {Haug, Nils and Geyrhofer, Lukas and Londei, Alessandro and Dervic, Elma and Desvars-Larrive, {Amélie} and Loreto, Vittorio and Pinior, Beate and Thurner, Stefan and Klimek, Peter},
+	year = {2020},
+	month = {12},
+	date = {2020-12},
+	journal = {Nature Human Behaviour},
+	pages = {1303--1312},
+	volume = {4},
+	number = {12},
+	doi = {10.1038/s41562-020-01009-0},
+	url = {https://www.nature.com/articles/s41562-020-01009-0},
+	langid = {en}
+}
+
+@article{islam2020,
+	title = {Physical distancing interventions and incidence of coronavirus disease 2019: natural experiment in 149 countries},
+	author = {Islam, Nazrul and Sharp, Stephen J. and Chowell, Gerardo and Shabnam, Sharmin and Kawachi, Ichiro and Lacey, Ben and Massaro, Joseph M. and {D{\textquoteright}Agostino}, Ralph B. and White, Martin},
+	year = {2020},
+	month = {07},
+	date = {2020-07-15},
+	journal = {BMJ},
+	pages = {m2743},
+	volume = {370},
+	doi = {10.1136/bmj.m2743},
+	url = {https://www.bmj.com/content/370/bmj.m2743},
+	langid = {en}
+}
+
+@article{murray,
+	title = {Identifying factors associated with the issuance of coronavirus-related stay-at-home orders in the Middle East and North Africa Region},
+	author = {Murray, Gregg R. and Jilani-Hyler, Nadia},
+	journal = {World Medical & Health Policy},
+	volume = {n/a},
+	number = {n/a},
+	doi = {https://doi.org/10.1002/wmh3.444},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/wmh3.444},
+	langid = {en}
+}
+
+@article{perra2021,
+	title = {Non-pharmaceutical interventions during the COVID-19 pandemic: A review},
+	author = {Perra, Nicola},
+	year = {2021},
+	month = {02},
+	date = {2021-02-13},
+	journal = {Physics Reports},
+	doi = {10.1016/j.physrep.2021.02.001},
+	url = {https://www.sciencedirect.com/science/article/pii/S0370157321000624},
+	langid = {en}
+}
+
+@article{sebhatu2020,
+	title = {Explaining the homogeneous diffusion of COVID-19 nonpharmaceutical interventions across heterogeneous countries},
+	author = {Sebhatu, Abiel and Wennberg, Karl and Arora-Jonsson, Stefan and Lindberg, Staffan I.},
+	year = {2020},
+	month = {09},
+	date = {2020-09-01},
+	journal = {Proceedings of the National Academy of Sciences},
+	pages = {21201--21208},
+	volume = {117},
+	number = {35},
+	doi = {10.1073/pnas.2010625117}
+}
+
+@techreport{sharma2021,
+	title = {Understanding the effectiveness of government interventions in Europe{\textquoteright}s second wave of COVID-19},
+	author = {Sharma, Mrinank and Mindermann, {Sören} and Rogers-Smith, Charlie and Leech, Gavin and Snodin, Benedict and Ahuja, Janvi and Sandbrink, Jonas B. and Monrad, Joshua Teperowski and Altman, George and Dhaliwal, Gurpreet and Finnveden, Lukas and Norman, Alexander John and Oehm, Sebastian B. and {Sandkühler}, Julia Fabienne and Mellan, Thomas and Kulveit, Jan and Chindelevitch, Leonid and Flaxman, Seth and Gal, Yarin and Mishra, Swapnil and Brauner, Jan Markus and Bhatt, Samir},
+	year = {2021},
+	month = {03},
+	date = {2021-03-26},
+	pages = {2021.03.25.21254330},
+	url = {https://www.medrxiv.org/content/10.1101/2021.03.25.21254330v1},
+	langid = {en}
+}
+
+@article{zheng2020,
+	title = {HIT-COVID, a global database tracking public health interventions to COVID-19},
+	author = {Zheng, Qulu and Jones, Forrest K. and Leavitt, Sarah V. and Ung, Lawson and Labrique, Alain B. and Peters, David H. and Lee, Elizabeth C. and Azman, Andrew S.},
+	year = {2020},
+	month = {08},
+	date = {2020-08-27},
+	journal = {Scientific Data},
+	pages = {286},
+	volume = {7},
+	number = {1},
+	doi = {10.1038/s41597-020-00610-2},
+	url = {https://www.nature.com/articles/s41597-020-00610-2},
+	langid = {en}
+}
